--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
   <head>
   <meta charset="utf-8">
-    <title>document</title>
-<!--   <link rel="stylesheet" type="text/css" href="stylecss.css">
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <title>site</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+<!--  <script src="http://code.jquery.com/jquery-latest.js"></script>
    <script>
 </script> -->
   </head>
   <body>
-    <h1> Git_2 </h1>
+    <h1>SITE here </h1>
 	<p> new changing</p>
 
   </body>
