--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <head>
   <meta charset="utf-8">
     <title>site</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 <!--  <script src="http://code.jquery.com/jquery-latest.js"></script>
    <script>
 </script> -->
   </head>
   <body>
-    <h1>SITE here </h1>
+    <h1 class="r">SITE here </h1>
 	<p> new changing</p>
 
   </body>
