--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1 class="r">SITE here </h1>
 	<p> new changing</p>
+    <img src="images/IMG_1514.jpg" alt="">
 
   </body>
 </html>
